<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sheet4.Sheet4Activity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageNota"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/black"
                android:padding="1dp"
                android:src="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:id="@+id/TextHoraSalidaT"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/imageNota"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hora_salida" />

            <ImageButton
                android:id="@+id/fecha1Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/imageNota"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_calendar_today"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditFecha1"
                style="@style/StartGenerador"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/imageNota"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/fecha1Button" />

            <TextView
                android:id="@+id/EditHoraSalidaT"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/TextHoraSalidaT"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/t_cnicos_equitel" />

            <ImageButton
                android:id="@+id/reloj1Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/fecha1Button"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_reloj_schedule"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditReloj1"
                style="@style/StartGenerador"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditFecha1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/fecha1Button" />

            <TextView
                android:id="@+id/TextHoraSalidaC"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHoraAtencionC"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hora_salida" />

            <ImageButton
                android:id="@+id/fecha2Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHoraAtencionC"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_calendar_today"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditFecha2"
                style="@style/StartGenerador"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHoraAtencionC"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/fecha1Button" />

            <TextView
                android:id="@+id/EditHoraSalidaC"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/TextHoraSalidaC"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cliente" />

            <ImageButton
                android:id="@+id/reloj2Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/fecha2Button"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_reloj_schedule"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditReloj2"
                style="@style/StartGenerador"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/fecha2Button"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/fecha1Button" />


            <TextView
                android:id="@+id/TextHorallegadaC"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHoraSalidaT"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hora_llegada" />

            <ImageButton
                android:id="@+id/fecha3Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHoraSalidaT"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_calendar_today"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditFecha3"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHoraSalidaT"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                style="@style/StartGenerador"
                android:layout_toEndOf="@+id/fecha1Button" />

            <TextView
                android:id="@+id/EditHorallegadaC"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/TextHorallegadaC"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cliente" />

            <ImageButton
                android:id="@+id/reloj3Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/fecha3Button"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_reloj_schedule"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditReloj3"
                style="@style/StartGenerador"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/fecha3Button"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/fecha1Button" />


            <TextView
                android:id="@+id/TextHoraAtencionC"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHorallegadaC"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hora_atencion" />
            <ImageButton
                android:id="@+id/fecha4Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/reloj3Button"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_calendar_today"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditFecha4"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/reloj3Button"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                style="@style/StartGenerador"
                android:layout_toEndOf="@+id/fecha1Button" />

            <TextView
                android:id="@+id/EditHoraAtencionC"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/TextHoraAtencionC"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/cliente" />

            <ImageButton
                android:id="@+id/reloj4Button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/fecha4Button"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/EditHoraSalidaT"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_reloj_schedule"
                android:text="@string/camara" />

            <EditText
                android:id="@+id/EditReloj4"
                style="@style/StartGenerador"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_below="@+id/fecha4Button"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/fecha1Button" />


            <TextView
                android:id="@+id/TextCalificacionCliente"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@+id/EditHoraSalidaC"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/calificacion_cliente"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TextServicioCumplimiento"
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:layout_below="@+id/TextCalificacionCliente"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/servicio_cumplimiento"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextServCumplimiento1"
                style="@style/StartGenerador"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@+id/TextCalificacionCliente"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/TextServicioCumplimiento"
                android:gravity="center"
                android:text="1-10"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/EditServCumplimiento1"
                style="@style/StartGenerador"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@+id/TextCalificacionCliente"
                android:layout_toEndOf="@+id/TextServCumplimiento1"
                android:digits="1234567890,"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextOrdenAseo"
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditServCumplimiento1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/orden_y_aseo_sitio"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextOrdenAseo1"
                style="@style/StartGenerador"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditServCumplimiento1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/TextOrdenAseo"
                android:gravity="center"
                android:text="1-10"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/EditOrdenAseo1"
                style="@style/StartGenerador"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditServCumplimiento1"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/TextOrdenAseo1"
                android:digits="1234567890,"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextUsoElementosProteccion"
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditOrdenAseo1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/uso_elementos_proteccion"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/TextUsoElementosProteccion1"
                style="@style/StartGenerador"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditOrdenAseo1"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/TextUsoElementosProteccion"
                android:gravity="center"
                android:text="1-10"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/EditUsoElementosProteccion"
                style="@style/StartGenerador"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@+id/EditOrdenAseo1"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/TextUsoElementosProteccion1"
                android:digits="1234567890,"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:textSize="10sp" />

            <ImageView
                android:id="@+id/Camera4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/EditUsoElementosProteccion"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                tools:src="@android:drawable/ic_menu_camera" />

            <ImageButton
                android:id="@+id/ButtonCamera4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextUsoElementosProteccion"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/Camera4"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_baseline_camera"
                android:text="@string/camara" />

            <ImageButton
                android:id="@+id/ButtonCameraSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextUsoElementosProteccion"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/ButtonCamera4"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_baseline_image_search"
                android:text="@string/camara" />

            <ImageButton
                android:id="@+id/ButtonCamera4Upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextUsoElementosProteccion"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@+id/ButtonCameraSearch"
                android:shadowColor="@color/black"
                android:src="@drawable/ic_baseline_cloud_upload"
                android:text="@string/camara" />

            <Button
                android:id="@+id/ButtonEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Camera4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/enviar" />


        </RelativeLayout>

    </ScrollView>
</layout>